--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,16 @@ img {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
 }
+
+.BasketContainer ul,
+.BasketContainer li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.BasketContainer li {
+  padding: 0.5rem;
+  border: 1px solid #000;
+  display: flex;
+  gap: 0.5rem;
+}
